# Core CBC Casper
# Copyright (C) 2018 - 2020  Coordination Technology Ltd.
# Authors: pZ4 <pz4@protonmail.ch>,
#          Lederstrumpf,
#          h4sh3d <h4sh3d@truelevel.io>
#          roflolilolmao <q@truelevel.ch>
#
# This file is part of Core CBC Casper.
#
# Core CBC Casper is free software: you can redistribute it and/or modify it under the terms
# of the GNU Affero General Public License as published by the Free Software Foundation, either
# version 3 of the License, or (at your option) any later version.
#
# Core CBC Casper is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License along with the Core CBC
# Rust Library. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "core_cbc_casper"
description = "Abstractly define the CBC Casper message stucture and define functions for the construction and proper execution of protocols of the Casper family."
version = "0.0.0"
license-file = "LICENSE"
authors = ["pZ4 <pz4@protonmail.ch>", "Lederstrumpf", "h4sh3d <h4sh3d@truelevel.io>", "roflolilolmao <q@truelevel.ch>"]
homepage = "https://github.com/TrueLevelSA/cbc-casper-msg"
repository = "https://github.com/TrueLevelSA/cbc-casper-msg"
readme = "README.md"

edition = "2018"

[dependencies]
rayon = "*"
digest = "0.7"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
bincode = "1.0.1"
blake2 = "0.7"
itertools = "0.7.8"
proptest = { version = "0.9", optional = true }
rand = { version = "0.6", optional = true }

[dependencies.fixed-hash]
version = "0.3"
features = ["libc"]
default-features = false

[features]
integration_test = ["proptest", "rand"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "block"
harness = false
